--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Web Interface Requirements for Render Deployment
-flask>=2.3.0
-flask-cors>=4.0.0
-gunicorn>=21.2.0
-numpy>=1.21.0,<2.0.0
-tensorflow>=2.10.0,<2.16.0
-keras>=2.10.0
+flask>=2.3.0,<4.0.0
+flask-cors>=4.0.0,<5.0.0
+gunicorn>=21.2.0,<24.0.0
+numpy>=1.23.0,<2.0.0
+tensorflow>=2.13.0,<2.16.0
+keras>=2.13.0,<3.0.0
