--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@
 flask>=2.3.0,<4.0.0
 flask-cors>=4.0.0,<5.0.0
 gunicorn>=21.2.0,<24.0.0
-numpy>=1.23.0,<2.0.0
-tensorflow>=2.13.0,<2.16.0
-keras>=2.13.0,<3.0.0
+numpy>=1.24.0,<2.0.0
+tensorflow-cpu>=2.15.0
+# Note: Using tensorflow-cpu for lighter deployment on Render free tier
