--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,8 @@ services:
   - type: web
     name: rnn-backend
     runtime: python
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip setuptools wheel && pip install --no-cache-dir -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.0
     healthCheckPath: /api/health
 
   # Frontend Service
