Deploy minimal version without TensorFlow for faster deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 # Web Interface Requirements for Render Deployment
-# Pinned versions for Python 3.11.x compatibility
+# Minimal version for free tier deployment
 flask==3.0.3
 flask-cors==4.0.1
 gunicorn==22.0.0
-numpy==1.26.4
-tensorflow-cpu==2.16.1
-h5py==3.11.0
-# Note: Using tensorflow-cpu for lighter deployment on Render free tier
+
+# Optional: Uncomment these after basic deployment works
+# numpy==1.26.4
+# tensorflow-cpu==2.16.1
+# h5py==3.11.0
